<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerInformationActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/idc_shape"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_your_name"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="textPersonName"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_your_address"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="textPostalAddress"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_your_city"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_your_postal_code"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_your_telephone_number"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="phone"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_information"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/idc_shape"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_your_credit_card_number"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="number"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_your_card_type"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/idc_shape"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/inter_cvv_cvc"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:inputType="number"
            android:hint="@string/type_here"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_next_to_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="@drawable/idc_shape"
        android:gravity="center"/>

</LinearLayout>