<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationActivity"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_order_successfully_completed"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/idc_shape"
        android:layout_marginBottom="40dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/idc_shape">

    <TextView
        android:id="@+id/tv_phone_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/tv_phone_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_phone_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_phone_storage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/tv_phone_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/tv_costumer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/tv_delivery_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@drawable/idc_shape"
        android:layout_marginBottom="10dp"/>
</LinearLayout>